Fri May 26 22:09:09 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Valuetype/ValueBase.cpp:
          Fixed a memory leak introduced by the refactoring of
          _tao_unmarshal_pre. The ValueFactory reference was moved into
          the unmarshal_pre method directly, and in doing so inadvertently
          got its _var status stripped.

Fri May 26 11:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Runtime_Scheduler.cpp:
        * orbsvcs/orbsvcs/Sched/Reconfig_Scheduler_T.cpp:
          Applied workarounds for BCB2006 and BCB6 in release mode, the
          code results in the original form in an internal backend
          error, reported this to Borland as QC27961.

Thu May 25 23:12:56 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/TAO_Internal.cpp:

          Fixed logic in open_services() to eliminate an unused local
          variable warning (which happened when the TAO debug level
          was less than 3) and made many cosmetic changes to the
          whole file to bring the code into line with the ACE
          style guidelines.

Thu May 25 03:27:44 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/OctetSeqC.h:
        * tao/OctetSeqC.cpp:
        * tao/diffs/OctetSeq.diff:
          Reverted change from Tue May 16 19:08:49 UTC 2006 Phil Mesnier
          <mesnier_p@ociweb.com>

        * tao/Unbounded_Octet_Sequence_T.h:
          Moved the equality operations into the octet sequence class,
          making them member functions. This seems to resolve the
          namespace related problems.


Wed May 24 19:43:16 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/Server_Task.cpp:
          My fix for the servant reference counting used a ServantBase_var
          as the owner of the pointer to the servant instance, but that
          cannot be used as a target within ACE_NEW_RETURN macros on